cluster-maintenance/clusters/cit-cps-gpu/user/jupyter/jupyterhub-ssh/allow-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx
  namespace: jupyterhub
spec:
  podSelector:
    matchLabels:
      component: proxy
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
