cluster-maintenance/clusters/cit-cps-gpu/user/jupyter/jupyterhub-ssh/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jupyterhub-ssh
  namespace: jupyterhub
  labels:
    app.kubernetes.io/name: jupyterhub-ssh
    app.kubernetes.io/instance: jupyterhub-ssh
    app.kubernetes.io/component: ssh
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jupyterhub-ssh
      app.kubernetes.io/instance: jupyterhub-ssh
      app.kubernetes.io/component: ssh
  policyTypes:
  - Ingress
  - Egress
  egress:
    - ports:
      - protocol: UDP
        port: 53
      - protocol: TCP
        port: 53
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
        - port: ssh
          protocol: TCP
